--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@storybook/react": "^4.0.12",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4"
+    "@storybook/react": "^4.0.12"
   }
 }
