added parameter table with tests

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "aphrodite": "^2.2.3",
+    "commonmark": "^0.28.1",
     "jest-dom": "^3.0.0",
     "js-yaml": "^3.12.0",
     "prop-types": "^15.6.2",
